# G431_ADC

./: CMakeLists.txt  fft.py  main.cpp  program.sh
CubeMX/G431_ADC/: .mxproject  G431_ADC.ioc  Makefile  STM32G431KBTx_FLASH.ld  startup_stm32g431xx.s
CubeMX/G431_ADC/Inc/: main.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  tim.h  usbd_cdc_if.h
CubeMX/G431_ADC/Src/: adc.c  dac.c  gpio.c  main.c  spi.c  stm32g4xx_it.c  tim.c  usart.c  usbd_cdc_if.c  usbd_conf.c  usbd_desc.c
Inc/: main_cycle.hpp  sram.hpp  utils.hpp
Src/: fault.cpp  main.cpp  main_cycle.cpp  syscalls.c  sysmem.c  utils.cpp
